--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@tailwindcss/typography": "^0.5.4",
+    "date-fns": "^2.29.1",
     "next": "12.2.3",
     "react": "18.2.0",
     "react-dom": "18.2.0"
