--- a/package.json
+++ b/package.json
@@ -22,10 +22,12 @@
     "@types/node": "18.6.1",
     "@types/react": "18.0.9",
     "@types/react-dom": "18.0.6",
+    "@types/remark-prism": "^1.3.3",
     "autoprefixer": "^10.4.7",
     "eslint": "8.20.0",
     "eslint-config-next": "12.2.3",
     "postcss": "^8.4.14",
+    "remark-prism": "^1.3.6",
     "tailwindcss": "^3.1.6",
     "typescript": "4.7.4"
   }
