--- a/package.json
+++ b/package.json
@@ -15,8 +15,13 @@
     "next": "12.2.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "remark": "^14.0.2",
-    "remark-html": "^15.0.1"
+    "rehype-autolink-headings": "^6.1.1",
+    "rehype-prism": "^2.1.3",
+    "rehype-slug": "^5.0.1",
+    "rehype-stringify": "^9.0.3",
+    "remark-parse": "^10.0.1",
+    "remark-rehype": "^10.1.0",
+    "unified": "^10.1.2"
   },
   "devDependencies": {
     "@types/node": "18.6.1",
@@ -27,7 +32,6 @@
     "eslint": "8.20.0",
     "eslint-config-next": "12.2.3",
     "postcss": "^8.4.14",
-    "remark-prism": "^1.3.6",
     "tailwindcss": "^3.1.6",
     "typescript": "4.7.4"
   }
